[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iplookup"
version = "0.1.0"
description = "Small CLI for ipinfo lite lookups"
requires-python = ">=3.10"
dependencies = [
  "requests",
]

[project.scripts]
iplookup = "iplookup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]